changes for rerun benchmarks on different architecture and unified lab framework has been delivered